namespaces/live.cloud-platform.service.justice.gov.uk/laa-crown-court-remuneration-sandbox/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "laa-crown-court-remuneration-sandbox"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "LAA"
    cloud-platform.justice.gov.uk/slack-channel: "laa-ops-team"
    cloud-platform.justice.gov.uk/application: "laa-crown-court-remuneration-sandbox"
    cloud-platform.justice.gov.uk/owner: "LAA: laa-ops@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/laa-crown-court-remuneration-poc.git"
    cloud-platform.justice.gov.uk/team-name: "laaops"
    cloud-platform.justice.gov.uk/review-after: "2024-03-08"
